# redy_doc

./: .editorconfig  .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
assets/css/: style.css
assets/js/: copy_button.js
doc/: mkdocs.yml  pyproject.toml
doc/src/: index.ja.md  index.md  install.ja.md  install.md
doc/src/assets/css/: style.css
doc/src/assets/js/: redy.js
doc/src/tutorials/: 0001_helloworld.ja.md  0001_helloworld.md  0004_simple_fizz_buzz_program.ja.md
install/: index.html
ja/: index.html
ja/install/: index.html
ja/tutorials/0001_helloworld/: index.html
ja/tutorials/0002_data_types_and_variables/: index.html
ja/tutorials/0003_print_formatted/: index.html
ja/tutorials/0004_simple_fizz_buzz_program/: index.html
redy_lexer/: lexer.py  pyproject.toml
search/: search_index.json
src/: index.ja.md  index.md  install.ja.md  install.md
src/assets/css/: style.css
src/assets/js/: copy_button.js
src/tutorials/: 0001_helloworld.ja.md  0001_helloworld.md  0002_data_types_and_variables.ja.md  0002_data_types_and_variables.md  0003_print_formatted.ja.md  0003_print_formatted.md  0004_simple_fizz_buzz_program.md
tutorials/0001_helloworld/: index.html
tutorials/0002_data_types_and_variables/: index.html
tutorials/0003_print_formatted/: index.html
tutorials/0004_simple_fizz_buzz_program/: index.html
